--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -230,7 +230,7 @@ input {
 
 .small-icon {
     justify-content: center;
-    font-size: 36px;
+    font-size: 2rem;
 }
 
 
